
2009-11-17  Benjamin Mack  <benni@typo3.org>

	* Commited test case for #12244: Improve locallangXMLOverride feature (Thanks to Steffen Gebert)
	  This changes the LLoverride feature to $GLOBALS['TYPO3_CONF_VARS']['SYS']['locallangXMLOverride'] as an array

2009-11-17  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10119: Broken fe_adminLib.inc
	* Fixed bug #12616: Set recycler height dynamic
	* Fixed bug #12624: Unreplaced marker in login screen of classic skin

2009-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12619: htmlArea RTE: JS error raised by spell checker
	* Fixed bug #12622: htmlArea RTE: Incorrect behaviour of last item of list in gecko browsers

2009-11-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12621: Validation issue in sysext scheduler: endPage is called twice
	* Fixed bug #12620: Validation issue in web functions wizard new page: End tag for input omitted
	* Fixed bug #12617: Validation issue in sysext lowlevel: End tag for input omitted

2009-11-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12605: Flash Message for "extension provides additional configuration" (Thanks to Georg Ringer)
	* Fixed bug #12472: Recycler is missing title + description in the about module (Thanks to Georg Ringer)
	* Fixed bug #12546: Paths look weird on Windows

2009-11-16  Francois Suter  <francois@typo3.org>

	* Fixed bug #12565: Scheduler: Added option to turn off logging, which could be too verbose
	* Cleanup #12426: Reports: Localized all hard-coded strings in status reports
	* Fixed bug #12396: Warning produced by t3lib_div::flushOutputBuffers() (Thanks to Michael Klapper)

2009-11-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12594: "LastLogin"-Field creates PHP error on create (date)

2009-11-15  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #6954: Bug: History/undo information disappears after publication (Thanks to Tolleiv Nietsch)

2009-11-15  Steffen Kamper  <info@sk-typo3.de>
